--- a/web-main/views/index.ejs
+++ b/web-main/views/index.ejs
@@ -149,7 +149,9 @@
     <div id="notification-container"></div>
 
     <!-- Scripts JavaScript -->
-    <script src="/js/script.js" type="module"></script>
+    <!--<script src="/js/script.js" type="module"></script> -->
+    
+    <script src="/js/main.js" type="module"></script>
     
 </body>
 </html>
